[metadata]
name = asfault
description = Evolutionary test generation for vehicle simulation testing
author = Marc Müller
author-email = mmueller@beamng.gmbh
license = mit
url = https://github.com/Signaltonsalat/AsFault
long-description = file: README.rst
platforms = windows
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =src
setup_requires = pyscaffold>=3.1a0,<3.2a0
install_requires = numpy; scipy; click; Jinja2; matplotlib; networkx; Pyqtree; shapely; pandas; seaborn; descartes

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
testing =
    pytest
    pytest-cov

[options.entry_points]
console_scripts =
    asfault = asfault.app:cli

[test]
extras = True

[tool:pytest]
addopts =
    --cov asfault --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[aliases]
build = bdist_wheel
release = build upload

[bdist_wheel]
universal = 1

[build_sphinx]
source_dir = docs
build_dir = docs/_build

[devpi:upload]
no-vcs = 1
formats = bdist_wheel

[flake8]
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
version = 3.1
package = asfault
